Added Unit test and PA.

--- a/conway-console/conway-console.csproj
+++ b/conway-console/conway-console.csproj
@@ -7,6 +7,10 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="PasionaAnalyzer" Version="1.0.0" />
+  </ItemGroup>
+
+  <ItemGroup>
     <ProjectReference Include="..\conway-backend\conway-backend.csproj" />
   </ItemGroup>
 
