--- a/conway-backend/conway-backend.csproj
+++ b/conway-backend/conway-backend.csproj
@@ -5,4 +5,8 @@
     <RootNamespace>conway_backend</RootNamespace>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="PasionaAnalyzer" Version="1.0.0" />
+  </ItemGroup>
+
 </Project>
