--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -19,11 +19,8 @@ steps:
   displayName: 'dotnet restore'
 - script: dotnet build --configuration $(buildConfiguration)
   displayName: 'dotnet build $(buildConfiguration)'
-
-- task: mspremier.BuildQualityChecks.QualityChecks-task.BuildQualityChecks@5
-  displayName: 'Check build quality'
+- task: BuildQualityChecks@6
   inputs:
     checkWarnings: true
-    warningFailOption: fixed
-    warningThreshold: 1
-    showStatistics: true
+    warningFailOption: 'fixed'
+    warningThreshold: '0'
